<resources>
    <string name="app_name">Citizens Club</string>
    <string name="home">Home</string>
    <string name="club_history">Club History</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="fedback">Feedback</string>
    <string name="member_list">Member List</string>
    <string name="event_list">Event List</string>
    <string name="leikai_khangminnashi">Leikai Khangminnashi</string>
    <string name="donation_list">Donation List</string>
    <string name="important_contact">Important Contact</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="you">This Privacy Statement governs Personal Information we collect from our customers and online users (you), as well as information we automatically collect from your online visits (e.g. data collected via cookies). Please refer to your warranty statements and Texcutives Return Policy for policies that apply to information contained on hard drives returned to Texcutive.</string>
    <string name="paragraph3">For the purposes of this Privacy Statement, "Retail partner" means any subcontractor, vendor or other entity with whom we have an ongoing business relationship to provide products, services or information. "Personal Information" means information that identifies you, such as your name, telephone number and email address</string>
    <string name="paragraph4">Information We Collect: We may ask you to provide Personal Information when you -

Use our websites;
Request quotes, services, support, downloads, trials, whitepapers or information;
Place orders for products or services or register for events or webinars;
Apply for a credit card or financing;
Participate in surveys, sweepstakes or other promotional activities online or in any other venue;
Subscribe to newsletters, Texcutive programs, promotional emails or other materials;
Apply for a job, submit your resume/CV or create a candidate profile; or
Contact us.</string>
    <string name="paragraph5">Personal Information we request may include your email address, name, home address and telephone number. If you make a purchase, we may ask for your credit card number and billing information. We may also ask for your Social Security number and other data to process your credit or financing request. Job applicants may be asked to provide information such as educational background, employment experience and job interest, and such information can be recorded and processed in different countries. We may also collect demographic information, such as your business or company information, age, gender, interests, and preferences. Forms that you choose to complete will indicate whether information requested is mandatory or voluntary.</string>
    <string name="paragraph6">We may collect information about your visits to our websites, including the pages you view, the links and advertisements you click, search terms you enter, and other actions you take in connection with Texcutive websites and services. We may also collect certain information from the browser you used to come to our website, such as your Internet Protocol (IP) address, browser type and language, access times, the Uniform Resource Locator (URL) of the website that referred you to our website and to</string>
    <string name="paragraph7">In order to offer you a more consistent and personalized experience in your interactions with Texcutive, information collected through one source may be combined with information Texcutive obtains through other sources. This may include information that allows us to identify you across multiple devices through which you access our websites. We may also supplement the information we collect with information obtained from other parties, including our Retail Partners and other third parties.</string>
    <string name="paragraph8">Some Texcutive services may be co-branded and offered in conjunction with another company. If you register for or use such services, both Texcutive and the other company may receive information collected in conjunction with the co-branded services, and may use the information according to each companys privacy statement and other agreements with you.
</string>
    <string name="paragraph9">How We Use Personal Information
Texcutive uses your Personal Information to:

Texcutive website and application will capture the IMEI number of the user’s mobile device, captures photo and track the location of the device in order to locate the device. This information will only be shared with the user on his/her request and on the number they will authorize, else will be kept safe on the server.
Deliver the services and support or carry out the transactions you have requested;
Send communications to you, such as product safety information, your transaction status including order confirmations, information about particular Texcutive programs in which you have chosen to participate, information about products and services available from Texcutive and its subsidiaries, promotional offers and surveys;
Facilitate communications from Texcutive Retail Partners;
Customize, analyze and improve our products, services (including the content and advertisements on our website), technologies, communications and relationship with you;
Enforce our conditions of sale, website terms and/or separate contracts (if applicable) with you;
Prevent fraud and other prohibited or illegal activities;
Protect the security or integrity of our website(s), our business(es), or our products or services; or Otherwise, as disclosed to you at the point of collection.
Personal Information collected may be stored and processed in India or any other country in which Texcutive or its subsidiaries or Retail Partners maintain facilities.
</string>
    <string name="paragraph10">Disclosing Personal Information
We may share your Personal Information with subsidiaries or Retail Partners to carry out transactions you request, or to make our business or that of our subsidiaries more responsive to your needs, which includes our subsidiaries providing you with information about Texcutive, and Texcutive-branded products and services. These communications may include requests relating to Texcutive and Texcutive-branded products or services or offers. We will only share your Personal Information with Retail Partners who agree to protect your Personal Information and use it solely for the purposes set forth by Texcutive.</string>
    <string name="paragraph11">In addition, Texcutive may share your Personal Information with participants in our sales and marketing chain, including but not limited to retailers, resellers, distributors, integrators, order fulfillers and some sales agents (“Channel Partners”), for the limited purposes of selling, marketing or providing support for Texcutive products and services.

We may also disclose your Personal Information in connection with law enforcement, fraud prevention or other legal action; as required by law or regulation; if Texcutive (or a part of Texcutive) is sold or merges with another company; or if Texcutive reasonably believes it is necessary to protect Texcutive, its customers or the public.

Except as described above, we will not disclose your Personal Information to third parties for their own marketing purposes without your consent.</string>
    <string name="paragraph12">How You Can Access Your Information
Texcutive wants to help you keep your Personal Information accurate. To view or edit your Personal Information that has been stored online in your Texcutive account, please visit your Texcutive customer account on www.texcutive.com website. For the security of your account, you will be required to sign in with your login ID and password. If you have any questions about the type of Personal Information we hold about you or if you wish to request deletion or correction of Personal Information we hold about you, please send a written request to info@texcutive.com or the postal address provided at the bottom of this Privacy Statement.</string>
    <string name="paragraph13">Selecting Your Communication Preferences and Opting Out of Marketing
You may choose to receive or not receive marketing communications from Texcutive by indicating your preferences. Opportunities to select your preferences include the following:

The My Account on Texcutive.com allow you to choose whether you wish to receive marketing communications from Texcutive, and to subscribe or unsubscribe to newsletters about our products and services; and
At any point you can also call our customer support and submit a request to be removed from our advertising and marketing lists (catalogs, telephone, faxes and email);</string>
    <string name="paragraph14">When you save a cart while shopping online, you can choose to receive email reminders;
Any marketing by Texcutive, or any third parties on behalf of Texcutive, will be conducted in accordance with applicable laws and include where applicable methods to allow you to express your preferences (including the possibility of being removed from our advertising and marketing lists as set forth above).
Please allow up to 10 business days for your email preferences to take effect. Because some promotions, such as direct mail catalogs, are developed in advance, you may sometimes receive solicitations after we receive your preference request.</string>
    <string name="paragraph15">How We Secure Your Personal Information
Texcutive takes all reasonable steps to protect your Personal Information from misuse, interference and loss, as well as unauthorized access, modification or disclosure. The ways we do this include:

using encryption when collecting or transferring sensitive information, such as credit card details;
limiting physical access to our premises;
limiting access to the information we collect about you;
ensuring that we and our Business Partners have appropriate security safeguards to keep personal information secure; and
Where required by law, destroying or de-identifying Personal Information.
Collection and Use of Childrens Personal Information
Texcutive takes childrens privacy seriously. We do not knowingly collect personal information from children under the age of 13 through our websites. If you are under 13 years of age, please do not submit any personal information through our websites without the express consent and participation of a parent or guardian.
</string>
    <string name="paragraph16">How We and Our Partners Use Cookies and Web Beacons
Texcutive websites use Texcutive and third-party cookies to enable you to sign in to our services and to help personalize your online experience. These technologies and the information collected about you may also be used to track your activity across multiple devices. We use cookies to store your preferences and other information on your computer in order to save you time by eliminating the need to enter the same information repeatedly.

A cookie is a piece of text that is placed on your computers hard drive. Depending on the settings you have selected, your browser adds the text to your device as a small file. Many browsers are set to accept cookies by default. You have the ability to accept or decline cookies as you prefer. The Help portion of your web browser, most likely found on the toolbar, typically tells you how to prevent your browser from accepting new cookies, how to have the browser notify you when you receive a new cookie, or how to disable cookies altogether.

Cookies allow you to take advantage of some of Texcutives essential features, including allowing you to save a Shopping Cart and remembering items in your Shopping Cart between visits. If you choose to decline cookies, you may not be able to sign in or use other interactive features of Texcutive websites and services that depend on cookies.</string>
</resources>